@@ -107,7 +107,8 @@ static const WBXMLErrorCodeItem error_table [] = {
                                               "  - Use a version of Expat that output UTF-8" },
     { WBXML_ERROR_CHARSET_UNKNOWN,              "The character set is unknown."},
     { WBXML_ERROR_CHARSET_CONV_INIT,            "The converter for the character set cannot be initialized."},
-    { WBXML_ERROR_CHARSET_CONV,                 "The character conversion failed."}
+    { WBXML_ERROR_CHARSET_CONV,                 "The character conversion failed."},
+    { WBXML_ERROR_CHARSET_NOT_FOUND,            "The character set cannot be found."}
 };
 
 #define ERROR_TABLE_SIZE ((WB_ULONG) (sizeof(error_table) / sizeof(error_table[0])))
